# surrealdb-extras

./: .envrc  .gitignore  Cargo.toml  crates.nix  flake.nix  readme.md
.github/workflows/: docs.yml
src/: define.rs  lib.rs  query.rs  r2k.rs  records.rs  surreal_table.rs
src/thing/: mod.rs
src/thing/thing_array/: mod.rs
src/thing/thing_func/: from.rs  impl_.rs  mod.rs
src/thing/thing_type/: from.rs  impl_.rs  mod.rs
surrealdb-extras-proc-macro/: Cargo.toml
surrealdb-extras-proc-macro/src/: lib.rs  part.rs  query.rs  table.rs  util.rs
