[workspace]
members = ["./surrealdb-extras-proc-macro"]

[workspace.package]
version = "2.0.11-alpha3"
edition = "2024"
repository = "https://github.com/tukanoidd/surrealdb-extras"
license = "MIT"
authors = ["frederik", "Vitalii Lukyanov <tukanoid@outlook.com>"]
description = "Provides additional functionality for working with SurrealDB"

[workspace.dependencies]
surrealdb = { version = "3.0", package = "surrealdb-nightly", default-features = false }
surrealdb-core = { version = "3.0", package = "surrealdb-core-nightly" }

[package]
name = "surrealdb-extras"
readme = "readme.md"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
surrealdb-extras-proc-macro = { path = "./surrealdb-extras-proc-macro" }

surrealdb.workspace = true

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", optional = true }
geo = { version = "0.30", optional = true }
rust_decimal = { version = "1.37", optional = true }
uuid = { version = "1.17", optional = true }
serde-content = "0.1.2"

[features]
default = []
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
geo = ["dep:geo"]
rust_decimal = ["dep:rust_decimal"]
