[package]
name = "surrealdb-extras-proc-macro"
keywords = ["template", "proc_macro", "procmacro"]
readme = "../readme.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = { version = "1.0" }
syn = "2.0"
deluxe = "0.5.0"
