[package]
name = "surrealdb-extras-proc-macro"
keywords = ["template", "proc_macro", "procmacro"]
readme = "../readme.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
manyhow = { version = "0.11.4", features = ["darling"] }
proc-macro2 = { version = "1.0.103", features = ["nightly", "span-locations"] }
quote = "1.0.42"
syn = "2.0.111"

heck = "0.5.0"

surrealdb.workspace = true
surrealdb-core.workspace = true
